--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,16 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.19.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
